--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -18,24 +18,41 @@
           <td><%= link_to @book.title, @book %></td>
           <td><%= @book.body %></td>
           <% if @book.favorited_by?(current_user) %>
-            <td>
-              <%= link_to book_favorite_path(@book), method: :delete do %>
-                ♥<%= @book.favorites.count %>
-              <% end %>
-            </td>
+          <td>
+            <%= link_to book_favorite_path(@book), method: :delete do %>
+              ♥<%= @book.favorites.count %>
+            <% end %>
+          </td>
           <% else %>
-            <td>
-              <%= link_to book_favorite_path(@book), method: :post do %>
-                ♡<%= @book.favorites.count %>
-              <% end %>
-            </td>
+          <td>
+            <%= link_to book_favorite_path(@book), method: :post do %>
+              ♡<%= @book.favorites.count %>
+            <% end %>
+          </td>
           <% end %>
+          <td>コメント数：<%= @book.book_comments.count %></td>
           <% if @user == current_user %>
-            <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success" %></td>
-            <td><%= link_to 'Destroy', @book, method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger"%></td>
+          <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success" %></td>
+          <td><%= link_to 'Destroy', @book, method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger"%></td>
           <% end %>
         </tr>
       </table>
+      <% @book.book_comments.each do |book_comment| %>
+      <div>
+        <%= image_tag book_comment.user.get_profile_image, size:'50x50' %>
+        <%= book_comment.comment %>
+        <% if book_comment.user == current_user %>
+          <%= link_to "Destroy", book_book_comment_path(book_comment.book, book_comment), method: :delete, class: 'btn btn-danger' %>
+        <% end %><br>
+        <%= link_to book_comment.user.name, user_path(book_comment.user) %>
+      </div>
+      <% end %>
+      <div>
+        <%= form_with model: [@book, @book_comment] do |f| %>
+        <%= f.text_area :comment %><br>
+        <%= f.submit "送信" %>
+        <% end %>
+      </div>
     </div>
   </div>
 </div>
