--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -8,9 +8,18 @@
 	  <th>introduction</th>
 	  <th><%= user.introduction %></th>
   </tr>
+  <tr>
+    <th>follows</th>
+    <th><%= user.followings.count %></th>
+  </tr>
+  <tr>
+    <th>followers</th>
+    <th><%= user.followers.count %></th>
+  </tr>
 </table>
 
 <div class='row'>
+  <% #ifでログインユーザーの場合は編集、そうじゃない時はフォローするボタン %>
   <%= link_to edit_user_path(user), class: "btn btn-outline-secondary btn-block" do %>
     <i class="fas fa-user-cog"></i>
   <% end %>
