--- a/app/views/users/_index.html.erb
+++ b/app/views/users/_index.html.erb
@@ -11,6 +11,13 @@
       <tr>
         <td><%= image_tag user.get_profile_image, size: '50x50' %></td>
         <td><%= user.name %></td>
+        <td>フォロー数：<%= user.followings.count %></td>
+        <td>フォロワー数：<%= user.followers.count %></td>
+        <% if current_user.following?(user) %>
+        <td><%= link_to "フォロー外す", user_relationships_path(user.id), method: :delete %></td>
+        <% else %>
+        <td><%= link_to "フォローする", user_relationships_path(user.id), method: :post %></td>
+        <% end %>
         <td><%= link_to 'Show', user %></td>
       </tr>
     <% end %>
