--- a/app/views/users/_index.html.erb
+++ b/app/views/users/_index.html.erb
@@ -16,7 +16,11 @@
         <% if current_user.following?(user) %>
         <td><%= link_to "フォロー外す", user_relationships_path(user.id), method: :delete %></td>
         <% else %>
+        <% if user == current_user %>
+        <td></td>
+        <% else %>
         <td><%= link_to "フォローする", user_relationships_path(user.id), method: :post %></td>
+        <% end %>
         <% end %>
         <td><%= link_to 'Show', user %></td>
       </tr>
