--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -18,17 +18,9 @@
         </td>
         <td><%= link_to book.title,book %></td>
         <td><%= book.body %></td>
-        <% if book.favorited_by?(current_user) %>
-        <td><%= link_to book_favorite_path(book), method: :delete do %>
-            ♥<%= book.favorites.count %>
-            <% end %>
+        <td class="favorite-btn_<%= book.id %>">
+          <%= render 'favorites/favorite-btn', book: book %>
         </td>
-        <% else %>
-        <td><%= link_to book_favorite_path(book), method: :post do %>
-            ♡<%= book.favorites.count %>
-            <% end %>
-        </td>
-        <% end %>
         <td>コメント数：<%= book.book_comments.count %></td>
       </tr>
     <% end %>
