--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -4,7 +4,7 @@
       <h2>User info</h2>
       <%= render 'users/info', user: @user %>
       <h2 class="mt-3">New book</h2>
-      <%= render 'form', book: @booknew %>
+      <%= render 'books/form', book: Book.new %>
     </div>
     <div class='col-md-8 offset-md-1'>
   		<h2>Book detail</h2>
@@ -17,19 +17,9 @@
           </td>
           <td><%= link_to @book.title, @book %></td>
           <td><%= @book.body %></td>
-          <% if @book.favorited_by?(current_user) %>
-          <td>
-            <%= link_to book_favorite_path(@book), method: :delete do %>
-              ♥<%= @book.favorites.count %>
-            <% end %>
+          <td class="favorite-btn_<%= @book.id%>">
+            <%= render 'favorites/favorite-btn', book: @book %>
           </td>
-          <% else %>
-          <td>
-            <%= link_to book_favorite_path(@book), method: :post do %>
-              ♡<%= @book.favorites.count %>
-            <% end %>
-          </td>
-          <% end %>
           <td>コメント数：<%= @book.book_comments.count %></td>
           <% if @user == current_user %>
           <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success" %></td>
@@ -48,6 +38,7 @@
       </div>
       <% end %>
       <div>
+        <%= render 'layouts/errors', obj: @book %>
         <%= form_with model: [@book, @book_comment] do |f| %>
         <%= f.text_area :comment %><br>
         <%= f.submit "送信" %>
