--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -20,28 +20,20 @@
           <td class="favorite-btn_<%= @book.id%>">
             <%= render 'favorites/favorite-btn', book: @book %>
           </td>
-          <td>コメント数：<%= @book.book_comments.count %></td>
+          <td class="comment_counter">
+            <%= render 'book_comments/counter', book: @book %>
+          </td>
           <% if @user == current_user %>
           <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success" %></td>
           <td><%= link_to 'Destroy', @book, method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger"%></td>
           <% end %>
         </tr>
       </table>
-      <% @book.book_comments.each do |book_comment| %>
-      <div>
-        <%= image_tag book_comment.user.get_profile_image, size:'50x50' %>
-        <%= book_comment.comment %>
-        <% if book_comment.user == current_user %>
-          <%= link_to "Destroy", book_book_comment_path(book_comment.book, book_comment), method: :delete, class: 'btn btn-danger' %>
-        <% end %><br>
-        <%= link_to book_comment.user.name, user_path(book_comment.user) %>
+      <div class="comment_list">
+        <%= render 'book_comments/list', book: @book %>
       </div>
-      <% end %>
-      <div>
-        <%= form_with model: [@book, @book_comment] do |f| %>
-        <%= f.text_area :comment %><br>
-        <%= f.submit "送信" %>
-        <% end %>
+      <div class="comment_text_area">
+        <%= render 'book_comments/form', book: @book, book_comment: @book_comment %>
       </div>
     </div>
   </div>
