--- a/app/views/book_comments/_form.html.erb
+++ b/app/views/book_comments/_form.html.erb
@@ -1,4 +1,4 @@
 <%= form_with model: [book, book_comment], local: false do |f| %>
-<%= f.text_area :comment, class: "comment_text_area" %><br>
+<%= f.text_area :comment, rows: "5", class: "w-100 comment_text_area" %><br>
 <%= f.submit "送信" %>
 <% end %>
