--- a/app/views/searches/search.html.erb
+++ b/app/views/searches/search.html.erb
@@ -1,4 +1,4 @@
-<% if @range == "Book" %>
+<% if @model == "Book" %>
   <h1>Books search for "<%= @word %>"</h1>
   <table class="table">
     <thead>
