--- a/app/views/groups/edit.html.erb
+++ b/app/views/groups/edit.html.erb
@@ -1,1 +1,18 @@
-<h1>グループのeditページ</h1>
+<h3>Editing Group</h3>
+<%= form_with model: @group do |f| %>
+  <div>
+    <%= f.label :グループ名 %><br>
+    <%= f.text_field :name %>
+  </div>
+  <div>
+    <%= f.label :紹介文 %><br>
+    <%= f.text_area :introduction %>
+  </div>
+  <div>
+    <%= f.label :グループ画像 %><br>
+    <%= f.file_field :group_image %>
+  </div>
+  <div>
+    <%= f.submit "Update Group" %>
+  </div>
+<% end %>
