--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,1 +1,21 @@
 <h3>Groups</h3>
+<table class="table">
+  <thead>
+    <tr>
+      <th></th>
+      <th>グループ名</th>
+      <th>紹介文</th>
+      <th></th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @groups.each do |group| %>
+    <tr>
+      <td><%= image_tag group.get_group_image, size: "50x50" %></td>
+      <td><%= link_to group.name, group_path(group.id) %></td>
+      <td><%= group.introduction %></td>
+      <td><%= link_to "Edit", edit_group_path(group.id) %></td>
+    </tr>
+    <% end %>
+  </tbody>
+</table>
