--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -14,7 +14,11 @@
       <td><%= image_tag group.get_group_image, size: "50x50" %></td>
       <td><%= link_to group.name, group_path(group.id) %></td>
       <td><%= group.introduction %></td>
+      <% if group.owner.id == current_user.id %>
       <td><%= link_to "Edit", edit_group_path(group.id) %></td>
+      <% else %>
+      <td></td>
+      <% end %>
     </tr>
     <% end %>
   </tbody>
