--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -5,6 +5,7 @@
       <th></th>
       <th>グループ名</th>
       <th>紹介文</th>
+      <th>メンバー数</th>
       <th></th>
     </tr>
   </thead>
@@ -14,6 +15,7 @@
       <td><%= image_tag group.get_group_image, size: "50x50" %></td>
       <td><%= link_to group.name, group_path(group.id) %></td>
       <td><%= group.introduction %></td>
+      <td><%= group.users.count %></td>
       <% if group.owner.id == current_user.id %>
       <td><%= link_to "Edit", edit_group_path(group.id) %></td>
       <% else %>
