--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -7,6 +7,7 @@
       <th>紹介文</th>
       <th>メンバー</th>
       <th></th>
+      <th></th>
     </tr>
   </thead>
   <tbody>
@@ -25,6 +26,11 @@
       <td><%= link_to "Leave this group", group_group_users_path(@group.id), method: :delete %></td>
       <% else %>
       <td><%= link_to "Join this group", group_group_users_path(@group.id), method: :post %></td>
+      <% end %>
+      <% if @group.owner.id == current_user.id %>
+      <td><%= link_to "Notice an Event", group_new_mail_path(@group.id) %></td>
+      <% else %>
+      <td></td>
       <% end %>
     </tr>
   </tbody>
