レイアウト

--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -13,6 +13,6 @@
     <%= f.file_field :group_image %>
   </div>
   <div>
-    <%= f.submit "Create Group" %>
+    <%= f.submit class: "btn btn-primary" %>
   </div>
 <% end %>
