--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -1,27 +1,15 @@
-<h3>Groups</h3>
-<table class="table">
-  <thead>
-    <tr>
-      <th></th>
-      <th>グループ名</th>
-      <th>紹介文</th>
-      <th>メンバー数</th>
-      <th></th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @groups.each do |group| %>
-    <tr>
-      <td><%= image_tag group.get_group_image, size: "50x50" %></td>
-      <td><%= link_to group.name, group_path(group.id) %></td>
-      <td><%= group.introduction %></td>
-      <td><%= group.users.count %></td>
-      <% if group.owner.id == current_user.id %>
-      <td><%= link_to "Edit", edit_group_path(group.id) %></td>
-      <% else %>
-      <td></td>
-      <% end %>
-    </tr>
-    <% end %>
-  </tbody>
-</table>
+<%= render "searches/window" %>
+<div class="container px-5 px-sm-0">
+  <div class="row">
+    <div class="col-md-3">
+      <h2>User info</h2>
+      <%= render "users/info", user: current_user %>
+      <h2 class="mt-3">New book</h2>
+      <%= render "books/form", book: Book.new %>
+    </div>
+    <div class="col-md-8 offset-md-1">
+      <h2>Groups</h2>
+      <%= render "index", groups: @groups %>
+    </div>
+  </div>
+</div>
