--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,37 +1,47 @@
-<h3>Group Detail</h3>
-<table class="table">
-  <thead>
-    <tr>
-      <th></th>
-      <th>グループ名</th>
-      <th>紹介文</th>
-      <th>メンバー</th>
-      <th></th>
-      <th></th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td><%= image_tag @group.get_group_image, size: "50x50" %></td>
-      <td><%= @group.name %></td>
-      <td><%= @group.introduction %></td>
-      <% @group.users.each do |user| %>
-      <td>
-        <li><%= user.name %></li>
-      </td>
-      <% end %>
-      <% if @group.owner.id == current_user.id %>
-      <td><%= link_to "Edit", edit_group_path(@group.id) %></td>
-      <% elsif @group.include_user?(current_user) %>
-      <td><%= link_to "Leave this group", group_group_users_path(@group.id), method: :delete %></td>
-      <% else %>
-      <td><%= link_to "Join this group", group_group_users_path(@group.id), method: :post %></td>
-      <% end %>
-      <% if @group.owner.id == current_user.id %>
-      <td><%= link_to "Notice an Event", group_new_mail_path(@group.id) %></td>
-      <% else %>
-      <td></td>
-      <% end %>
-    </tr>
-  </tbody>
-</table>
+<div class="container px-5 px-sm-0">
+  <div class="row">
+    <div class="col-md-3">
+      <h2>User info</h2>
+      <%= render "users/info", user: current_user %>
+      <h2 class="mt-3">New book</h2>
+      <%= render "books/form", book: Book.new %>
+    </div>
+    <div class="col-md-8 offset-md-1">
+      <h2>Group Detail</h2>
+      <table class="table">
+        <thead>
+          <tr>
+            <th></th>
+            <th>グループ名</th>
+            <th>紹介文</th>
+            <th>メンバー</th>
+            <th></th>
+            <th></th>
+            <th></th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td><%= image_tag @group.get_group_image, size: "50x50" %></td>
+            <td><%= @group.name %></td>
+            <td><%= @group.introduction %></td>
+            <% @group.users.each do |user| %>
+            <td>
+              <li><%= user.name %></li>
+            </td>
+            <% end %>
+            <% if @group.owner.id == current_user.id %>
+            <td><%= link_to "Edit", edit_group_path(@group.id), class: "btn btn-success" %></td>
+            <td><%= link_to "Notice an Event", group_new_mail_path(@group.id), class: "btn btn-info" %></td>
+            <td><%= link_to "Delete Group", group_path(@group.id), method: :delete, data: { confirm: "本当に削除しますか？" }, class: "btn btn-danger" %></td>
+            <% elsif @group.include_user?(current_user) %>
+            <td><%= link_to "Leave this group", group_group_users_path(@group.id), method: :delete %></td>
+            <% else %>
+            <td><%= link_to "Join this group", group_group_users_path(@group.id), method: :post %></td>
+            <% end %>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
