--- a/app/views/groups/edit.html.erb
+++ b/app/views/groups/edit.html.erb
@@ -1,18 +1,24 @@
-<h3>Editing Group</h3>
-<%= form_with model: @group do |f| %>
-  <div>
-    <%= f.label :グループ名 %><br>
-    <%= f.text_field :name %>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+      <h3>Editing Group</h3>
+      <%= form_with model: @group do |f| %>
+      <div class="form-group">
+        <%= f.label :グループ名 %><br>
+        <%= f.text_field :name, class: "form-control" %>
+      </div>
+      <div class="form-group">
+        <%= f.label :紹介文 %><br>
+        <%= f.text_area :introduction, class: "form-control" %>
+      </div>
+      <div class="form-group">
+        <%= f.label :グループ画像 %><br>
+        <%= f.file_field :group_image %>
+      </div>
+      <div class="form-group">
+        <%= f.submit "Update Group", class: "btn btn-success" %>
+      </div>
+    <% end %>
+    </div>
   </div>
-  <div>
-    <%= f.label :紹介文 %><br>
-    <%= f.text_area :introduction %>
-  </div>
-  <div>
-    <%= f.label :グループ画像 %><br>
-    <%= f.file_field :group_image %>
-  </div>
-  <div>
-    <%= f.submit "Update Group" %>
-  </div>
-<% end %>
+</div>
