--- a/app/views/groups/new_mail.html.erb
+++ b/app/views/groups/new_mail.html.erb
@@ -1,14 +1,20 @@
-<h3>Event Mail</h3>
-<%= form_with url: group_send_mail_path(@group.id) do |f| %>
-  <div>
-    <%= f.label :title %><br>
-    <%= f.text_field :mail_title %>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+      <h3>Event Mail</h3>
+      <%= form_with url: group_send_mail_path(@group.id) do |f| %>
+      <div class="form-group">
+        <%= f.label :title %><br>
+        <%= f.text_field :mail_title, class: "form-control" %>
+      </div>
+      <div class="form-group">
+        <%= f.label :content %><br>
+        <%= f.text_area :mail_content, class: "form-control" %>
+      </div>
+      <div class="form-group">
+        <%= f.submit "送信", class: "btn btn-primary" %>
+      </div>
+      <% end %>
+    </div>
   </div>
-  <div>
-    <%= f.label :content %><br>
-    <%= f.text_area :mail_content %>
-  </div>
-  <div>
-    <%= f.submit "送信" %>
-  </div>
-<% end %>
+</div>
