--- a/app/views/groups/send_mail.html.erb
+++ b/app/views/groups/send_mail.html.erb
@@ -1,8 +1,14 @@
-<h3>送信が完了しました</h3>
-<P>内容は以下のとおりです。</P>
-<div>
-  [タイトル]<%= @mail_title %>
-</div>
-<div>
-  [本文]<%= safe_join(@mail_content.split("\n"), tag(:br)) %>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+      <h3>送信が完了しました</h3>
+      <P>内容は以下のとおりです。</P>
+      <div>
+        [タイトル]<%= @mail_title %>
+      </div>
+      <div>
+        [本文]<%= safe_join(@mail_content.split("\n"), tag(:br)) %>
+      </div>
+    </div>
+  </div>
 </div>
