--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -22,6 +22,7 @@
           <%= render 'favorites/favorite-btn', book: book %>
         </td>
         <td>コメント数：<%= book.book_comments.count %></td>
+        <td><%= render "books/static_rate", book: book %></td>
       </tr>
     <% end %>
   </tbody>
