--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -10,7 +10,12 @@
     </div>
     <div class="col-md-8 offset-md-1">
       <h2>Books</h2>
-      <%= render 'index', books: @books%>
+      <div>
+        <%= link_to "新しい順", books_path(latest: "true") %> |
+        <%= link_to "評価の高い順", books_path(star_count: "true") %> | 
+        <%= link_to "Reset", books_path %>
+      </div>
+      <%= render 'index', books: @books %>
     </div>
   </div>
 </div>
