--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -11,7 +11,7 @@
   		<table class='table'>
   		  <tr>
           <td><%= link_to(@book.user) do %>
-            <%= image_tag @book.user.get_profile_image, size:"100x100" %><br>
+            <%= image_tag @book.user.get_profile_image, size: "50x50" %><br>
             <%= @book.user.name %>
             <% end %>
           </td>
@@ -22,6 +22,9 @@
           </td>
           <td class="comment_counter">
             <%= render 'book_comments/counter', book: @book %>
+          </td>
+          <td>
+            <%= render "static_rate", book: @book %>
           </td>
           <% if @user == current_user %>
           <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success" %></td>
