--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,5 +1,6 @@
-<%= render "searches/window" %>
 <div class="container px-5 px-sm-0">
+  <%= render "searches/window" %>
+  <%= render "tagsearches/tagsearch" %>
   <div class="row">
     <div class="col-md-3">
       <h2>User info</h2>
