--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -33,6 +33,10 @@
     </div>
   <% end %>
   <div class="form-group">
+    <%= f.label :tag %>
+    <%= f.text_field :category, class: "form-control book_category" %>
+  </div>
+  <div class="form-group">
     <%= f.submit class: 'btn btn-success' %>
   </div>
 <% end %>
