--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -17,6 +17,9 @@
           </td>
           <td><%= link_to @book.title, @book %></td>
           <td><%= @book.body %></td>
+          <% if @book.category.present? %>
+          <td><%= link_to @book.category, tagsearches_search_path(word: @book.category) %></td>
+          <% end %>
           <td class="favorite-btn_<%= @book.id%>">
             <%= render 'favorites/favorite-btn', book: @book %>
           </td>
