--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -4,6 +4,7 @@
       <th></th>
       <th>Title</th>
       <th>Opinion</th>
+      <th>Tag</th>
       <th></th>
       <th></th>
       <th colspan="3"></th>
@@ -18,6 +19,11 @@
         </td>
         <td><%= link_to book.title,book %></td>
         <td><%= book.body %></td>
+        <% if book.category.present? %>
+        <td><%= link_to book.category, tagsearches_search_path(word: book.category) %></td>
+        <% else %>
+        <td></td>
+        <% end %>
         <td class="favorite-btn_<%= book.id %>">
           <%= render 'favorites/favorite-btn', book: book %>
         </td>
