--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,6 +3,20 @@
     <div class='col-md-3'>
       <h2>User info</h2>
       <%= render 'info', user: @user %>
+      <% if @user != current_user %>
+        <% if (current_user.following?(@user)) && (@user.following?(current_user)) %>
+          <% if @isRoom == true %>
+            <%= link_to "DMへ",  room_path(@roomId) %>
+          <% else %>
+            <%= form_for @room do |f| %>
+              <%= fields_for @entry do |e| %>
+                <%= e.hidden_field:user_id, value: @user.id %>
+              <% end %>
+              <%= f.submit "DMを始める" %>
+            <% end %>
+          <% end %>
+        <% end %>
+      <% end %>
       <h2 class="mt-3">New book</h2>
       <%= render 'books/form', book: @book %>
     </div>
